# cards-against-all-ua

./: .env.example  .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  Dockerfile.celery  entrypoint-celery.sh  entrypoint.sh  main.py  pyproject.toml  settings.py
backend/api/auth/: decorators.py  dependencies.py  schemas.py  views.py
backend/api/game/: views.py
backend/api/health/: views.py
backend/authentication/: models.py  urls.py
backend/authentication/migrations/: 0001_initial.py  0002_user_answer_cards_user_cards_user_score.py  0003_alter_user_answer_cards_alter_user_cards.py
backend/core/: asgi.py  celery.py  settings.py  urls.py
backend/database/: collections.py  connection.py  enums.py  env.py  models.py  queries.py
backend/database/versions/: 00a9a35b8aec_add_usertoken_for_custom_jwt.py  566c1bf537b6_create_user_model.py  812cfc842f84_create_cards_model_and_user_room_model.py  ac2ba6af95bf_create_models_for_game_rooms_and_cards.py  f78691864013_create_usertoken_model_for_jwt.py
backend/gamecore/: admin.py  apps.py  engine.py  models.py  queries.py  responses.py  schemas.py  serializers.py  urls.py  views.py
backend/gamecore/migrations/: 0001_initial.py  0002_alter_roommodel_options_remove_roommodel_is_ended_and_more.py  (+4 more)
backend/gamesocket/: apps.py  consumers.py  notifications.py  routing.py
backend/operations/: hashers.py  passwords.py  tokens.py
backend/security/: passwords.py  tokens.py
backend/tasks/: tasks.py
backend/tests/: api_client.py  test_gamecore.py
backend/users/: admin.py  serializers.py  urls.py  views.py
backend/validators/: validators.py
(+34 files in other folders)
