[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["riisatoro <riisa.toro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
email-validator = "^1.2.1"
pytz = "^2022.1"
python-dateutil = "^2.8.2"
psycopg2-binary = "^2.9.3"
Django = "^4.0.4"
django-rest-framework = "^0.1.0"
djangorestframework-simplejwt = "^5.1.0"
django-database-url = "^1.0.3"
drf-spectacular = "^0.22.1"
channels = "^3.0.5"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
